--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "mahiyat-app",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    
-"typescript": "4.9.5"
+    "react-dom": "^18.3.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "vite": "^6.3.6",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "4.9.5"
   }
 }
